src/test/ui/nll/ty-outlives/impl-trait-outlives.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/impl-trait-outlives.rs:21:5
   |
LL |     x
   |     ^
   |
   = help: consider adding an explicit lifetime bound `T: ReEarlyBound(0, 'a)`...

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/impl-trait-outlives.rs:36:5
   |
LL |     x
   |     ^
   |
   = help: consider adding an explicit lifetime bound `T: ReEarlyBound(0, 'a)`...

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0309`.
